--- a/resources/static/css/style.css
+++ b/resources/static/css/style.css
@@ -47,7 +47,7 @@
     margin-left: var(--dlt-spacing-4-x) !important;
 }
 
-  /*
+/*
 navigation bar css
 */
 header.main-head {
@@ -138,7 +138,7 @@ header-wrap {
 }
 
 .dlt-tab-nav {
-display: inline-flex !important;
+    display: inline-flex !important;
 }
 
 .tag-card {
@@ -168,6 +168,7 @@ table {
     border-collapse: collapse;
     text-align: center;
 }
+
 .bg-clicked{
     background-color: var(--dlt-color-global-neutral-500)
 }
@@ -187,11 +188,11 @@ tbody tr:nth-child(odd) {
 }
 
 .detailed-description h2 {
-        font-size:var(--dlt-font-size-md);
+    font-size:var(--dlt-font-size-md);
 }
 
 .setup-instructions h1 {
-font-size:var(--dlt-font-size-md);
+    font-size:var(--dlt-font-size-md);
 }
 
 .setup-instructions h2 {
@@ -207,68 +208,68 @@ font-size:var(--dlt-font-size-md);
   
 @media (max-width: 768px) {
 /* for hiding the sidebar functionality on small devices*/
-#toggle {
-    display: none;
-    position: sticky;
-    top: 88%;
-    z-index: 9;
-}
-#toggle.active {
-    display: block;
-}
+    #toggle {
+        display: none;
+        position: sticky;
+        top: 88%;
+        z-index: 9;
+    }
+    #toggle.active {
+        display: block;
+    }
 
-#vertical-nav {
-    display: none;
-}
+    #vertical-nav {
+        display: none;
+    }
 
-#vertical-nav.active {
-    display: block;
-    min-width: 18rem;
-    min-height: 100vh!important;
-}
+    #vertical-nav.active {
+        display: block;
+        min-width: 18rem;
+        min-height: 100vh!important;
+    }
 
-#nav-item.active {
-    min-width: 18rem;
-}
+    #nav-item.active {
+        min-width: 18rem;
+    }
 
-#sidebar {
-    display: none;
-}
+    #sidebar {
+        display: none;
+    }
 
-#sidebar.active {
-    display: block;
-}
-#content {
-    margin: 0;
-}
+    #sidebar.active {
+        display: block;
+    }
+    #content {
+        margin: 0;
+    }
 
-#content-col {
-    display: block;
-}
-#content-col.active {
-    display: none;
-}
+    #content-col {
+        display: block;
+    }
+    #content-col.active {
+        display: none;
+    }
 
-/* For lowering the helm-install-command-label and tag-card on smaller device*/
-.label-main {
-    max-width: 228px !important;
-}
-.label-secondary {
-    max-width: 128px !important;
-}
-.tag-card {
-    width: 100% !important;
-}
+    /* For lowering the helm-install-command-label and tag-card on smaller device*/
+    .label-main {
+        max-width: 228px !important;
+    }
+    .label-secondary {
+        max-width: 128px !important;
+    }
+    .tag-card {
+        width: 100% !important;
+    }
 }
 
 @media only screen and (min-width: 767px) {
 /*For hiding the toggle on large screens*/
-.show-large {
-    display: block;
-}
-.show-mobile {
-    display: none;
-}
+    .show-large {
+        display: block;
+    }
+    .show-mobile {
+        display: none;
+    }
 }
 
 .u-p-copy-icon.u-p-copy-icon{
@@ -300,3 +301,56 @@ font-size:var(--dlt-font-size-md);
  .helm-chart { 
     margin-top: 10px;
  }
+
+.dlt-card-versions {
+    border: none !important; /* Remove border */
+    box-shadow: none !important; /* Remove box shadow on hover */
+}
+
+.helm-chart-description {
+    position: relative;
+    height: 60px;
+    max-height: 60px;
+    overflow: hidden;
+}
+
+.helm-chart-description {
+    text-align: left !important;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    height: 100%;
+    margin-bottom: 0;
+}
+
+.helm-chart-description::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.96));
+    pointer-events: none;
+}
+
+.info-header {
+    border: 2px solid rgba(167, 167, 167, 0.5);
+}
+
+td {
+    max-width: 100px;
+    word-wrap: break-word;
+}
+
+@media (max-width: 768px) {
+    .helm-chart-content-body {
+        display: flex;
+        flex-direction: column;
+    }
+    #helm-chart-readme {
+        width: 100% !important;
+    }
+    #helm-values-table-container {
+        width: 100% !important;
+    }
+}    
